--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,6 +1,2 @@
 [toolchain]
-#channel = "esp"
-profile = "default"
-channel = "stable"
-components = ["rust-src"]
-targets = ["riscv32imc-unknown-none-elf", "riscv32imac-unknown-none-elf"]
+channel = "esp"
