--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -14,6 +14,10 @@ tokio = { version = "1.28", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 color-eyre = "0.6"
-regex = "1.8"
 indoc = "2.0"
 tokio-stream = "0.1"
+target-lexicon = "0.12"
+lazy-regex = "2.5"
+
+[[bin]]
+name = "manifest_gen"
