--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 reqwest = { version = "0.11", default-features = false, features = [
     "rustls-tls",
     "json",
+    "stream",
 ] }
 tokio = { version = "1.28", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
@@ -18,6 +19,12 @@ indoc = "2.0"
 tokio-stream = "0.1"
 target-lexicon = "0.12"
 lazy-regex = "2.5"
+futures-util = "0.3"
+futures = "0.3"
+ring = "0.16"
+data-encoding = "2.4"
+tracing = "0.1"
+tracing-subscriber = "0.3"
 
 [[bin]]
 name = "manifest_gen"
