--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -26,5 +26,8 @@ data-encoding = "2.4"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 
+[dev-dependencies]
+maplit = "1.0"
+
 [[bin]]
 name = "manifest_gen"
