--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -6,25 +6,27 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+color-eyre = "0.6"
+data-encoding = "2.4"
+futures = "0.3"
+futures-util = "0.3"
+indoc = "2.0"
+lazy-regex = "2.5"
+par-stream = { version = "0.10", features = ["runtime-tokio"] }
 reqwest = { version = "0.11", default-features = false, features = [
     "rustls-tls",
     "json",
     "stream",
 ] }
-tokio = { version = "1.28", features = ["full"] }
+ring = "0.16"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-color-eyre = "0.6"
-indoc = "2.0"
-tokio-stream = "0.1"
 target-lexicon = "0.12"
-lazy-regex = "2.5"
-futures-util = "0.3"
-futures = "0.3"
-ring = "0.16"
-data-encoding = "2.4"
+textwrap = "0.16"
+tokio = { version = "1.28", features = ["full"] }
+tokio-stream = "0.1"
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [dev-dependencies]
 maplit = "1.0"
