--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.3.3", features = ["derive"] }
 color-eyre = "0.6"
 data-encoding = "2.4"
 futures = "0.3"
@@ -32,4 +33,4 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 maplit = "1.0"
 
 [[bin]]
-name = "manifest_gen"
+name = "manifester"
