--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,21 +12,14 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install Nix
       uses: DeterminateSystems/nix-installer-action@main
-    - name: Run `cargo test`
-      run: nix develop --command cargo test --manifest-path tools/Cargo.toml
-    - name: Run `nix fmt`
-      run: nix fmt -- *.nix --check
-
-  update-manifests:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Install Nix
-      uses: DeterminateSystems/nix-installer-action@main
     - name: Fetch Rust cache
       uses: Swatinem/rust-cache@v2
     - name: Run `cargo test`
       run: nix develop --command cargo test --manifest-path tools/Cargo.toml
     - name: Run `nix fmt`
       run: nix fmt -- *.nix --check
+
+  # update-manifests:
+  #   name: Build
+  #   runs-on: ubuntu-latest
+  #   steps:
