--- a/.github/workflows/update-manifests.yml
+++ b/.github/workflows/update-manifests.yml
@@ -1,20 +1,20 @@
 on:
   schedule:
-    - cron: "* * * * SUN"
+    - "0 0 * * 1"
   workflow_dispatch:
 
 jobs:
   update-manifests:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Install Nix
-      uses: DeterminateSystems/nix-installer-action@main
-    - name: Fetch Rust cache
-      uses: Swatinem/rust-cache@v2
-    - name: Generate manifests
-      run: nix develop --command cargo run -- --output-path manifests.nix
-    - uses: stefanzweifel/git-auto-commit-action@v4
-      with:
-        commit_message: Update package manifests
-        file_pattern: 'manifest.nix'
+      - uses: actions/checkout@v3
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@main
+      - name: Fetch Rust cache
+        uses: Swatinem/rust-cache@v2
+      - name: Generate manifests
+        run: nix develop --command cargo run -- --output-path manifests.nix
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Update package manifests
+          file_pattern: "manifest.nix"
