--- a/.github/workflows/update-manifests.yml
+++ b/.github/workflows/update-manifests.yml
@@ -24,4 +24,4 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Update package manifests
-          file_pattern: "manifest.nix"
+          file_pattern: "manifests.nix"
