--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,10 @@
+name: ci
 on:
   pull_request:
   push: { branches: [main] }
+permissions:
+  contents: read
 
-name: ci
 jobs:
   tests:
     runs-on: ubuntu-latest
