i hate esp i hate esp i hate esp i hate esp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,10 @@
     }
   },
   "cSpell.words": [
-    "aarch"
+    "aarch",
+    "espressif",
+    "nutype",
+    "riscv"
   ],
   "rust-analyzer.server.path": "rust-analyzer"
 }
